--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         coroutines = '1.5.0'
         lifecycleVersion = '2.3.1'
         materialVersion = '1.3.0'
-        roomVersion = '2.3.0'
+        roomVersion = '2.4.0-alpha01'
         navVersion = "2.3.5"
         // testing
         junitVersion = '4.13.2'
