--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
     // Jetpack Compose Integration
     implementation("androidx.navigation:navigation-compose:2.4.0-beta02")
 
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
 }
